--- a/widget.ui
+++ b/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>443</height>
+    <width>850</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>290</y>
+     <x>120</x>
+     <y>380</y>
      <width>51</width>
      <height>27</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="leftButton">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>330</y>
+     <x>70</x>
+     <y>420</y>
      <width>51</width>
      <height>27</height>
     </rect>
@@ -45,8 +45,8 @@
   <widget class="QPushButton" name="rightButton">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>330</y>
+     <x>170</x>
+     <y>420</y>
      <width>51</width>
      <height>27</height>
     </rect>
@@ -58,8 +58,8 @@
   <widget class="QPushButton" name="downButton">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>370</y>
+     <x>120</x>
+     <y>460</y>
      <width>51</width>
      <height>27</height>
     </rect>
@@ -71,8 +71,8 @@
   <widget class="QPushButton" name="zoomInButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>410</y>
+     <x>50</x>
+     <y>500</y>
      <width>87</width>
      <height>27</height>
     </rect>
@@ -87,8 +87,8 @@
   <widget class="QPushButton" name="zoomOutButton">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>410</y>
+     <x>150</x>
+     <y>500</y>
      <width>87</width>
      <height>27</height>
     </rect>
@@ -100,16 +100,103 @@
     <string>zoom out</string>
    </property>
   </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
+  <widget class="QListView" name="listView">
    <property name="geometry">
     <rect>
-     <x>239</x>
-     <y>19</y>
-     <width>421</width>
-     <height>401</height>
+     <x>20</x>
+     <y>30</y>
+     <width>250</width>
+     <height>190</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout"/>
+  </widget>
+  <widget class="QFrame" name="frame">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>250</y>
+     <width>251</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QLineEdit" name="widthWindow">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>10</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="heigthWindow">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>40</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Width</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="heightWindow">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>57</width>
+      <height>15</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Height</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>40</y>
+      <width>61</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OK</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QLabel" name="window">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>230</y>
+     <width>57</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Window</string>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
